--- a/views/index.ejs
+++ b/views/index.ejs
@@ -79,6 +79,7 @@
                     <div class="posts">
                         <div class="postsBody">
                             <p><%= posts.title %></p>
+                            <p><%= posts.body %></p>
                             <div class="postsInfo">
                                 <span>
                                     <%= posts.author %> - <%=
@@ -117,6 +118,7 @@
                     <div class="posts">
                         <div class="postsBody">
                             <p><%= posts.title %></p>
+                            <p><%= posts.body %></p>
                             <div class="postsInfo">
                                 <span>
                                     <%= posts.author %> - <%=
@@ -155,6 +157,7 @@
                     <div class="posts">
                         <div class="postsBody">
                             <p><%= posts.title %></p>
+                            <p><%= posts.body %></p>
                             <div class="postsInfo">
                                 <span>
                                     <%= posts.author %> - <%=
