--- a/views/myposts.ejs
+++ b/views/myposts.ejs
@@ -52,6 +52,7 @@
             <div class="posts">
               <div class="postsBody">
                 <p><%= posts.title %></p>
+                <p><%= posts.body %></p>
                 <div class="postsInfo">
                   <span>
                     <%= posts.author %> - <%=
