--- a/views/myposts.ejs
+++ b/views/myposts.ejs
@@ -75,7 +75,7 @@
               </div>
               <div class="deletePost">
                   <form action='/deletePost/<%= posts._id %>' method="delete">
-                      <button type="submit">X</button>
+                      <button type="submit"><img src="https://www.svgrepo.com/show/21045/delete-button.svg" alt="" srcset=""></button>
                   </form>
               </div>
             </div>
