--- a/views/login.ejs
+++ b/views/login.ejs
@@ -44,26 +44,58 @@
         <div class="loginBody">
           <div class="postsHeader">Log in</div>
           <form class="loginForm" action="/users/login" method="post">
-            <input type="text" name="email" id="email" placeholder="Email">
-            <input type="password" name="password" id="password" placeholder="Password">
+            <input type="text" name="email" id="email" placeholder="Email" required/>
+            <input
+              type="password"
+              name="password"
+              id="password"
+              placeholder="Password"
+              required
+            />
             <button class="loginButton">Log In</button>
             <a href="">Forgotton your password?</a>
           </form>
         </div>
       </section>
       <section id="signUpSection">
-          <div class="loginBody">
-            <div class="postsHeader">Sign Up</div>
-            <form class="signUpForm" action="/users" method="post">
-              <input type="text" name="firstName" id="firstName" placeholder="First Name">
-              <input type="text" name="lastName" id="lastName" placeholder="Last Name">
-              <input type="text" name="email" id="email" placeholder="Email">
-              <input type="password" name="password" id="password" placeholder="Password">
-              <input type="password" name="confirmPassword" id="confirmPassword" placeholder="Please Re-Enter Password">
-              <button class="loginButton">Sign Up</button>
-            </form>
-          </div>
-        </section>
+        <div class="loginBody">
+          <div class="postsHeader">Sign Up</div>
+          <form class="signUpForm" action="/users" method="post">
+            <input
+              type="text"
+              name="firstName"
+              id="firstName"
+              placeholder="First Name"
+              required
+            />
+            <input
+              type="text"
+              name="lastName"
+              id="lastName"
+              placeholder="Last Name"
+              required
+            />
+            <input type="text" name="email" id="email" placeholder="Email" required/>
+            <input
+              type="password"
+              name="password"
+              id="password"
+              placeholder="Password"
+              minlength="6"
+              required
+            />
+            <input
+              type="password"
+              name="confirmPassword"
+              id="confirmPassword"
+              placeholder="Please Re-Enter Password"
+              minlength="6"
+              required
+            />
+            <button class="loginButton">Sign Up</button>
+          </form>
+        </div>
+      </section>
     </main>
   </body>
 </html>
