--- a/views/login.ejs
+++ b/views/login.ejs
@@ -53,7 +53,7 @@
               required
             />
             <button class="loginButton">Log In</button>
-            <a href="">Forgotton your password?</a>
+            <a class="forgottenPasswordButton" href="#">Forgotton your password?</a>
           </form>
         </div>
       </section>
