--- a/views/myposts.ejs
+++ b/views/myposts.ejs
@@ -60,18 +60,8 @@
                   </span>
                 </div>
               </div>
-              <div class="postsScore">
-                <div class="upArrow">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 12">
-                    <g><path d="M1 8h10L6 3 1 8" /></g>
-                  </svg>
-                </div>
+              <div class="myPostsScore">
                 <p><%= posts.score %></p>
-                <div class="downArrow">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 12">
-                    <g><path d="M1 4h10L6 9 1 4" /></g>
-                  </svg>
-                </div>
               </div>
               <div class="deletePost">
                   <form action='/deletePost/<%= posts._id %>' method="delete">
