--- a/public/style.css
+++ b/public/style.css
@@ -243,6 +243,15 @@ aside {
   align-items: center;
 }
 
+.myPostsScore {
+  flex: 1;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center
+}
+
 .factscore p {
   font-size: 2.5rem;
 }
@@ -292,7 +301,7 @@ aside {
   border: none;
   background: none;
   cursor: pointer;
-  margin-top: 1rem;
+  margin-top: 2rem;
 }
 
 .deletePost img {
